--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,7 +1,7 @@
 /* Section Footer */
 
 .footer {
-    background-color: var(--yellow);
+    background-color: var(--navyblue);
     padding: var(--space-2xl) var(--space-xl);
     margin: 0;
     display: flex;
