Ajout des images, mise en place du footer

--- a/src/css/utils/variable.css
+++ b/src/css/utils/variable.css
@@ -21,6 +21,8 @@
     --font-important: "Elsie Swash Caps", cursive;
 
     /* Tailles de texte */
+    --text-xs: 0.75rem;
+    /* 12px */
     --text-sm: 0.875rem;
     /* 14px */
     --text-base: 1rem;
