Changement du hero + commencement de la rédaction de la page d'accueil

--- a/src/css/utils/variable.css
+++ b/src/css/utils/variable.css
@@ -17,7 +17,7 @@
     --gray-900: oklch(0.1371 0 0 / 1);
 
     /* Polices de caractère */
-    --font-mono: "IBM Plex Mono", monospace;
+    --font-mono: "IBM Plex Mono";
     --font-important: "Elsie Swash Caps", cursive;
 
     /* Tailles de texte */
