--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -38,3 +38,18 @@
     margin-bottom: var(--space-2xl);
     color: var(--light);
 }
+
+.youtube_video {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: var(--space-6xl);
+    margin-bottom: var(--space-6xl);
+}
+
+.section__title {
+    font-family: var(--font-important);
+    font-size: var(--text-3xl);
+    padding-left: var(--space-lg);
+    margin-bottom: var(--space-3xl);
+}
