--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -32,6 +32,7 @@
     display: block;
     background-color: var(--navyblue);
     font-size: var(--text-base);
+    font-family: var(--font-mono);
     border-radius: var(--space-lg);
     line-height: 1.2;
     padding: var(--space-lg);
@@ -52,4 +53,14 @@
     font-size: var(--text-3xl);
     padding-left: var(--space-lg);
     margin-bottom: var(--space-3xl);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    outline: none;
+}
+
+a:focus {
+    outline: none;
 }
