--- a/src/css/layout/section.css
+++ b/src/css/layout/section.css
@@ -3,3 +3,48 @@
     padding-top: 6.4rem;
     margin-bottom: var(--space-6xl);
 }
+
+.carousel {
+    width: 100%;
+    overflow-x: auto;
+    padding-bottom: var(--space-4xl);
+    padding-top: var(--space-4xl);
+    margin-bottom: var(--space-4xl);
+    background-color: var(--lightpurple);
+}
+
+.carousel__container {
+    display: flex;
+    gap: var(--space-2xl);
+    padding: var(--space-lg);
+    font-family: var(--font-mono);
+}
+
+.card {
+    min-width: 15rem;
+    max-width: 15rem;
+    height: 25rem;
+    background-color: var(--navyblue);
+    color: var(--light);
+    padding-left: var(--space-lg);
+    padding-right: var(--space-lg);
+    border-radius: var(--space-xl);
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+
+.card__title {
+    font-family: var(--font-important);
+    font-size: var(--text-xl);
+    padding-bottom: var(--space-lg);
+    padding-top: var(--space-lg);
+}
+
+.card img {
+    width: 100%;
+    height: 11rem;
+    object-fit: cover;
+    object-position: top;
+    display: block;
+    transform: scale(1.2)
+}
