--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,7 @@ Soyez attentifs à l'ordre d'import :
 
 /* Components */
 @import "components/menu.css";
+@import "components/language.css";
 @import "components/btn.css";
 @import "components/carousel.css";
 @import "components/card.css";
