--- a/src/css/layout/section.css
+++ b/src/css/layout/section.css
@@ -3,3 +3,57 @@
     padding-top: 6.4rem;
     margin-bottom: var(--space-6xl);
 }
+
+.info-block {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--navyblue);
+    border-radius: 0;
+    padding: var(--space-md);
+    margin: var(--space-xl) 0%;
+    gap: var(--space-md);
+    border-radius: var(--space-lg);
+}
+
+.info-block__title {
+    font-family: var(--font-mono);
+    font-size: var(--text-lg);
+    color: var(--light);
+    font-weight: lighter;
+    margin: 0;
+    width: 100%;
+    margin-bottom: var(--space-md);
+}
+
+.info-block__wrapper {
+    display: flex;
+    align-items: flex-start;
+    gap: var(--space-lg);
+}
+
+.info-block__image {
+    width: 40%;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-md);
+}
+
+.info-block__image img {
+    width: 100%;
+    height: auto;
+    border-radius: 0;
+    display: block;
+}
+
+.info-block__content {
+    width: 60%;
+    color: var(--light);
+    font-family: var(--font-mono);
+    font-size: var(--text-xs);
+    line-height: 1.6;
+}
+
+.info-block__content p {
+    margin-bottom: var(--space-xs);
+}
