--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -31,6 +31,8 @@
     animation: fadeInRotate 0.3s ease forwards;
 }
 
+/* Animation pour le menu button */
+
 @keyframes fadeInRotate {
     0% {
         opacity: 0;
