--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -30,7 +30,7 @@
 .navyblue__block {
     display: block;
     background-color: var(--navyblue);
-    font-size: var(--text-base);
+    font-size: var(--text-sm);
     font-family: var(--font-mono);
     border-radius: var(--space-lg);
     line-height: 1.2;
@@ -69,7 +69,7 @@ a:focus {
     font-size: var(--text-base);
     margin-top: var(--space-2xl);
     margin-bottom: var(--space-2xl);
-    margin-left: var(--space-base);
+    margin-left: var(--space-sm);
 }
 
 .textmono-content {
@@ -77,5 +77,41 @@ a:focus {
     font-size: var(--text-sm);
     margin-bottom: var(--space-3xl);
     font-weight: lighter;
-    margin-left: var(--space-base);
+    margin-left: var(--space-sm);
+}
+
+.image__representation {
+    margin-top: var(--space-3xl);
+    margin-bottom: var(--space-3xl);
+}
+
+.info-box {
+    background-color: var(--lightpurple);
+    border-radius: var(--space-lg);
+    padding: var(--space-lg);
+    margin-top: var(--space-3xl);
+    margin-bottom: var(--space-3xl);
+    border-radius: 15% 0%;
+}
+
+.info-box__title {
+    font-family: var(--font-mono);
+    font-size: var(--text-base);
+    color: var(--light);
+    padding: var(--space-base);
+    margin: 0;
+    font-weight: lighter;
+}
+
+.info-box__content {
+    font-family: var(--font-mono);
+    font-size: var(--text-sm);
+    color: var(--light);
+    padding: var(--space-sm);
+    margin-top: var(--space-md);
+    line-height: 1.2;
+}
+
+.info-box__content p {
+    margin-bottom: var(--space-sm);
 }
