--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -1,3 +1,9 @@
+.hero {
+    width: 100%;
+    padding-top: 6.4rem;
+    margin-bottom: var(--space-6xl);
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
