--- a/src/css/layout/section.css
+++ b/src/css/layout/section.css
@@ -1,6 +1,6 @@
-.hero {
+.hero-imitationgame {
     width: 100%;
-    padding-top: 6.4rem;
+    padding-top: 6.1rem;
     margin-bottom: var(--space-6xl);
 }
 
