--- a/src/css/layout/section.css
+++ b/src/css/layout/section.css
@@ -247,3 +247,16 @@
     margin-left: var(--space-sm);
     font-weight: lighter;
 }
+
+.text-blue {
+    background-color: var(--lightblue);
+    font-family: var(--font-mono);
+    font-size: var(--space-xl);
+    line-height: 1.3;
+    color: var(--light);
+    padding: var(--space-lg);
+    margin-top: var(--space-lg);
+    margin-bottom: var(--space-xl);
+    width: 100%;
+    box-sizing: border-box;
+}
