--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -40,10 +40,10 @@
 .navyblue__block {
     display: block;
     background-color: var(--navyblue);
-    font-size: var(--text-sm);
+    font-size: var(--text-base);
     font-family: var(--font-mono);
     border-radius: var(--space-lg);
-    line-height: 1.2;
+    line-height: 1.3;
     padding: var(--space-lg);
     margin-bottom: var(--space-2xl);
     color: var(--light);
@@ -76,20 +76,18 @@ a:focus {
 
 .textmono-title {
     font-family: var(--font-mono);
-    font-size: var(--text-base);
+    font-size: var(--text-lg);
     margin-top: var(--space-2xl);
-    margin-bottom: var(--space-2xl);
-    margin-left: var(--space-lg);
+    margin-bottom: var(--space-3xl);
 }
 
 .textmono-content {
 
     font-family: var(--font-mono);
     font-size: var(--text-sm);
+    line-height: 1.2;
     margin-bottom: var(--space-3xl);
     font-weight: lighter;
-    margin-left: var(--space-lg);
-    margin-right: var(--space-lg);
 }
 
 .image__representation {
@@ -126,4 +124,8 @@ a:focus {
 
 .info-box__content p {
     margin-bottom: var(--space-sm);
+}
+
+.text__main {
+    padding-left: var(--space-lg);
 }
