--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -8,6 +8,10 @@
     background-color: var(--navyblue);
 }
 
+.body--autresprojets {
+    background-color: var(--navyblue);
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
