--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -78,12 +78,13 @@ body.menu-open {
 
 .menu__list {
     list-style: none;
-    padding: 0 var(--space-6xl);
+    padding: 0;
     margin: 0;
-    width: fit-content;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: var(--space-md);
+    align-items: center;
 }
 
 .menu__list li {
