Changement au niveau du contenu de menu de manière à sa soit plus responsive et que sa ne casse pas le header

--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -47,15 +47,18 @@
 
 .menu__overlay {
     position: fixed;
-    top: 6.125rem;
+    top: 0;
     left: 0;
     width: 100%;
-    height: calc(100vh - 6.125rem);
+    height: 100vh;
     background-color: var(--navyblue);
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: var(--space-3xl) var(--space-xl) var(--space-6xl) var(--space-xl);
+    padding-top: 20vh;
+    padding-left: var(--space-xl);
+    padding-right: var(--space-xl);
+    padding-bottom: var(--space-6xl);
     opacity: 0;
     visibility: hidden;
     transform: translateY(-20px) scale(0.95);
