--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -58,7 +58,7 @@
 
 .header__minititle {
     position: fixed;
-    top: 5.25vh;
+    top: var(--space-lg);
     left: 65%;
     transform: translateX(-50%);
     z-index: 101;
